[gd_scene load_steps=14 format=3 uid="uid://xyp0got3c5dp"]

[ext_resource type="Script" path="res://scenes/ui/LayoutPanel/LayoutPanel.gd" id="1_o5pl2"]
[ext_resource type="PackedScene" uid="uid://g5yh8tb0v6bk" path="res://scenes/world_objects/Sprinkler/Sprinkler.tscn" id="2_16d6l"]
[ext_resource type="PackedScene" uid="uid://db8wvn8xh27x0" path="res://scenes/world_objects/DistanceMeasurement/DistanceMeasurement.tscn" id="2_rmdn3"]
[ext_resource type="PackedScene" uid="uid://co2gtkorldd8j" path="res://scenes/ui/SprinklerPropertyEditor/SprinklerPropertyEditor.tscn" id="3_itpjk"]
[ext_resource type="PackedScene" uid="uid://cmr73cpklqypc" path="res://scenes/world_objects/PolygonNode/PolygonNode.tscn" id="4_85obg"]
[ext_resource type="PackedScene" uid="uid://bujgf1ym2asal" path="res://scenes/ui/ImageNodePropertyEditor/ImageNodePropertyEditor.tscn" id="4_legmd"]
[ext_resource type="PackedScene" uid="uid://c7ey0qd3m5ads" path="res://scenes/ui/ObjectsList/ObjectsList.tscn" id="5_p3ckg"]
[ext_resource type="Texture2D" uid="uid://bumt4lc5f8gm2" path="res://assets/icons/Add.svg" id="6_58poj"]
[ext_resource type="Texture2D" uid="uid://cphnqsvx30p2c" path="res://assets/icons/Remove.svg" id="7_nx6cf"]
[ext_resource type="Texture2D" uid="uid://covc7nfq44by2" path="res://assets/icons/GridToggle.svg" id="8_uxbpy"]
[ext_resource type="PackedScene" uid="uid://dqfod1mptbtve" path="res://scenes/ui/WorldViewportContainer/WorldViewportContainer.tscn" id="9_xrpqu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31l3s"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.705882)

[sub_resource type="Theme" id="Theme_kss1b"]
Label/styles/normal = SubResource("StyleBoxFlat_31l3s")

[node name="LayoutPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5pl2")
SprinklerScene = ExtResource("2_16d6l")
DistanceMeasurementScene = ExtResource("2_rmdn3")
PolygonScene = ExtResource("4_85obg")

[node name="ImgDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(900, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.jpg", "*.png", "*.bmp", "*.jpeg")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="LeftPane" type="TabContainer" parent="HSplitContainer"]
layout_mode = 2
tab_focus_mode = 0

[node name="Properties" type="ScrollContainer" parent="HSplitContainer/LeftPane"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="SprinklerPropertiesList" parent="HSplitContainer/LeftPane/Properties" instance=ExtResource("3_itpjk")]
layout_mode = 2

[node name="ImageNodePropertiesList" parent="HSplitContainer/LeftPane/Properties" instance=ExtResource("4_legmd")]
visible = false
layout_mode = 2

[node name="Objects" parent="HSplitContainer/LeftPane" instance=ExtResource("5_p3ckg")]
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="LayoutToolbar" type="HBoxContainer" parent="HSplitContainer/Layout"]
layout_mode = 2

[node name="AddSprinkler" type="Button" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2
tooltip_text = "Add sprinkler"
focus_mode = 0
text = "Add Sprinkler"
icon = ExtResource("6_58poj")

[node name="AddImage" type="Button" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2
tooltip_text = "Add image to project. Project needs to be saved before you can add images."
focus_mode = 0
disabled = true
text = "Add Image"
icon = ExtResource("6_58poj")

[node name="AddDistMeasure" type="Button" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2
tooltip_text = "Add a distance measurement"
focus_mode = 0
text = "Add Dist."
icon = ExtResource("6_58poj")

[node name="AddPolygon" type="Button" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2
tooltip_text = "Add a distance measurement"
focus_mode = 0
text = "Add Poly"
icon = ExtResource("6_58poj")

[node name="RemoveButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2
tooltip_text = "Remove item"
focus_mode = 0
disabled = true
icon = ExtResource("7_nx6cf")

[node name="VSeparator" type="VSeparator" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2

[node name="ShowGridButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2
tooltip_text = "Toggle grid visibility"
focus_mode = 0
toggle_mode = true
button_pressed = true
icon = ExtResource("8_uxbpy")

[node name="World" type="Control" parent="HSplitContainer/Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="ViewportContainer" parent="HSplitContainer/Layout/World" instance=ExtResource("9_xrpqu")]
layout_mode = 1

[node name="MousePosLabel" type="Label" parent="HSplitContainer/Layout/World"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme = SubResource("Theme_kss1b")

[node name="PreferenceUpdateTimer" type="Timer" parent="."]
autostart = true

[connection signal="file_selected" from="ImgDialog" to="." method="_on_img_dialog_file_selected"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/AddSprinkler" to="." method="_on_add_sprinkler_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/AddImage" to="." method="_on_add_image_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/AddDistMeasure" to="." method="_on_add_dist_measure_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/AddPolygon" to="." method="_on_add_polygon_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="toggled" from="HSplitContainer/Layout/LayoutToolbar/ShowGridButton" to="." method="_on_show_grid_checkbox_toggled"]
[connection signal="gui_input" from="HSplitContainer/Layout/World/ViewportContainer" to="." method="_on_viewport_container_gui_input"]
[connection signal="timeout" from="PreferenceUpdateTimer" to="." method="_on_preference_update_timer_timeout"]
